--- a/ValidationData/TP/additional/hgmd_all.ipynb
+++ b/ValidationData/TP/additional/hgmd_all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,25 +249,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/12/26 10:32:45 [INFO   ] (__main__) - chr1\n"
+      "2024/12/26 10:35:37 [INFO   ] (__main__) - chr1\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 113\u001b[0m\n\u001b[1;32m     94\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([df, pd\u001b[38;5;241m.\u001b[39mDataFrame([[\n\u001b[1;32m     95\u001b[0m         v\u001b[38;5;241m.\u001b[39mCHROM, v\u001b[38;5;241m.\u001b[39mPOS, v\u001b[38;5;241m.\u001b[39mREF, v\u001b[38;5;241m.\u001b[39mALT[\u001b[38;5;241m0\u001b[39m], \n\u001b[1;32m     96\u001b[0m         vep[vepidx[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSYMBOL\u001b[39m\u001b[38;5;124m'\u001b[39m]], vep[vepidx[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSYMBOL_SOURCE\u001b[39m\u001b[38;5;124m'\u001b[39m]], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    109\u001b[0m         maxpangolin, squirls]],\n\u001b[1;32m    110\u001b[0m         columns\u001b[38;5;241m=\u001b[39mcols)], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    112\u001b[0m df\u001b[38;5;241m.\u001b[39mdrop_duplicates(inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m--> 113\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mENST_Full\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mposparser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch_enst_full\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    115\u001b[0m df\u001b[38;5;241m.\u001b[39mto_pickle(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfp_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfp_stem\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.enst.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/pandas/core/frame.py:9423\u001b[0m, in \u001b[0;36mDataFrame.apply\u001b[0;34m(self, func, axis, raw, result_type, args, **kwargs)\u001b[0m\n\u001b[1;32m   9412\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapply\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m frame_apply\n\u001b[1;32m   9414\u001b[0m op \u001b[38;5;241m=\u001b[39m frame_apply(\n\u001b[1;32m   9415\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m   9416\u001b[0m     func\u001b[38;5;241m=\u001b[39mfunc,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   9421\u001b[0m     kwargs\u001b[38;5;241m=\u001b[39mkwargs,\n\u001b[1;32m   9422\u001b[0m )\n\u001b[0;32m-> 9423\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39m__finalize__(\u001b[38;5;28mself\u001b[39m, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapply\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/pandas/core/apply.py:678\u001b[0m, in \u001b[0;36mFrameApply.apply\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    675\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw:\n\u001b[1;32m    676\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mapply_raw()\n\u001b[0;32m--> 678\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_standard\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/pandas/core/apply.py:798\u001b[0m, in \u001b[0;36mFrameApply.apply_standard\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    797\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mapply_standard\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 798\u001b[0m     results, res_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_series_generator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    800\u001b[0m     \u001b[38;5;66;03m# wrap results\u001b[39;00m\n\u001b[1;32m    801\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwrap_results(results, res_index)\n",
-      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/pandas/core/apply.py:814\u001b[0m, in \u001b[0;36mFrameApply.apply_series_generator\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    811\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m option_context(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmode.chained_assignment\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    812\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(series_gen):\n\u001b[1;32m    813\u001b[0m         \u001b[38;5;66;03m# ignore SettingWithCopy here in case the user mutates\u001b[39;00m\n\u001b[0;32m--> 814\u001b[0m         results[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mv\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    815\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(results[i], ABCSeries):\n\u001b[1;32m    816\u001b[0m             \u001b[38;5;66;03m# If we have a view on v, we need to make a copy because\u001b[39;00m\n\u001b[1;32m    817\u001b[0m             \u001b[38;5;66;03m#  series_generator will swap out the underlying data\u001b[39;00m\n\u001b[1;32m    818\u001b[0m             results[i] \u001b[38;5;241m=\u001b[39m results[i]\u001b[38;5;241m.\u001b[39mcopy(deep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/pandas/core/apply.py:133\u001b[0m, in \u001b[0;36mApply.__init__.<locals>.f\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf\u001b[39m(x):\n\u001b[0;32m--> 133\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/GitHub/nar/ValidationData/TP/additional/../../../libs/posparser.py:246\u001b[0m, in \u001b[0;36mfetch_enst_full\u001b[0;34m(row, db)\u001b[0m\n\u001b[1;32m    244\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfetch_enst_full\u001b[39m(row, db: gffutils\u001b[38;5;241m.\u001b[39minterface\u001b[38;5;241m.\u001b[39mFeatureDB):\n\u001b[1;32m    245\u001b[0m     query_region \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchr\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCHROM\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mint\u001b[39m(row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPOS\u001b[39m\u001b[38;5;124m'\u001b[39m]) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mint\u001b[39m(row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPOS\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n\u001b[0;32m--> 246\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m db\u001b[38;5;241m.\u001b[39mregion(region\u001b[38;5;241m=\u001b[39mquery_region, featuretype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtranscript\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m    247\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m t\u001b[38;5;241m.\u001b[39mid\u001b[38;5;241m.\u001b[39mstartswith(row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mENST\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m    248\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m t\u001b[38;5;241m.\u001b[39mid\n",
-      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/gffutils/interface.py:796\u001b[0m, in \u001b[0;36mFeatureDB.region\u001b[0;34m(self, region, seqid, start, end, strand, featuretype, completely_within)\u001b[0m\n\u001b[1;32m    789\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_last_args \u001b[38;5;241m=\u001b[39m args\n\u001b[1;32m    790\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_context \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    791\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstart\u001b[39m\u001b[38;5;124m\"\u001b[39m: start,\n\u001b[1;32m    792\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mend\u001b[39m\u001b[38;5;124m\"\u001b[39m: end,\n\u001b[1;32m    793\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseqid\u001b[39m\u001b[38;5;124m\"\u001b[39m: seqid,\n\u001b[1;32m    794\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregion\u001b[39m\u001b[38;5;124m\"\u001b[39m: region,\n\u001b[1;32m    795\u001b[0m }\n\u001b[0;32m--> 796\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    797\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m c:\n\u001b[1;32m    798\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_feature_returner(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mi)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/12/26 10:41:49 [INFO   ] (__main__) - chr2\n",
+      "2024/12/26 10:46:51 [INFO   ] (__main__) - chr3\n",
+      "2024/12/26 10:49:08 [INFO   ] (__main__) - chr4\n",
+      "2024/12/26 10:49:51 [INFO   ] (__main__) - chr5\n",
+      "2024/12/26 10:51:06 [INFO   ] (__main__) - chr6\n",
+      "2024/12/26 10:52:28 [INFO   ] (__main__) - chr7\n",
+      "2024/12/26 10:54:21 [INFO   ] (__main__) - chr8\n",
+      "2024/12/26 10:55:03 [INFO   ] (__main__) - chr9\n",
+      "2024/12/26 10:56:07 [INFO   ] (__main__) - chr10\n",
+      "2024/12/26 10:57:01 [INFO   ] (__main__) - chr11\n",
+      "2024/12/26 11:00:18 [INFO   ] (__main__) - chr12\n",
+      "2024/12/26 11:02:09 [INFO   ] (__main__) - chr13\n",
+      "2024/12/26 11:02:33 [INFO   ] (__main__) - chr14\n",
+      "2024/12/26 11:03:18 [INFO   ] (__main__) - chr15\n",
+      "2024/12/26 11:04:22 [INFO   ] (__main__) - chr16\n",
+      "2024/12/26 11:05:59 [INFO   ] (__main__) - chr17\n",
+      "2024/12/26 11:09:01 [INFO   ] (__main__) - chr18\n",
+      "2024/12/26 11:09:14 [INFO   ] (__main__) - chr19\n",
+      "2024/12/26 11:10:49 [INFO   ] (__main__) - chr20\n",
+      "2024/12/26 11:11:08 [INFO   ] (__main__) - chr21\n",
+      "2024/12/26 11:11:15 [INFO   ] (__main__) - chr22\n",
+      "2024/12/26 11:11:32 [INFO   ] (__main__) - chrX\n",
+      "2024/12/26 11:17:18 [INFO   ] (__main__) - chrY\n"
      ]
     }
    ],
@@ -390,24 +401,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### Very slow process ####\n",
-    "# Annotate ENST Full ID for fetching variant information from GENCODE database\n",
-    "\n",
-    "for chr in chr_list:\n",
-    "\tlogger.info(f\"chr{chr}\")\n",
-    "\tdf = pd.read_pickle(f\"{fp_dir}/{fp_stem}.pkl\")\n",
-    "\tdf.drop_duplicates(inplace=True)\n",
-    "\tdf['ENST_Full'] = df.apply(posparser.fetch_enst_full, db=db, axis=1)\n",
-    "\t# df.to_pickle(f'splai_vep_vcfs/hgmd_dm/hgmd_dm.chr${chr}.splai.vep.snv.vcf.enst.pkl')\n",
-    "\tdf.to_pickle(f\"{fp_dir}/{fp_stem}.enst.pkl\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,9 +423,11 @@
     "    df = pd.read_pickle(f\"variant_data_set_vcfs/hgmd_splai_maxent_pango_sq/hgmd_dm.chr{chr}.splai.vep.maxent.loftee.snv.pangolin.squirls.enst.pkl\")\n",
     "\n",
     "    df = df.fillna(\n",
-    "        {'loftee': '.', 'maxentscan_alt': '.', \n",
-    "         'maxentscan_diff': '.', 'maxentscan_ref': '.'}\n",
+    "        {'loftee': '.', 'maxentscan_alt': '.', 'maxentscan_diff': '.', \n",
+    "         'maxentscan_ref': '.', 'pang_gene': '.', 'pang_pos_socre_gain': '.',\n",
+    "         'pang_pos_score_loss': '.', 'pang_warning': '.', 'Squirls': '.'}\n",
     "         )\n",
+    "    \n",
     "\n",
     "    logger.info('Calculate the distance to the nearest splice site in intron variant...')\n",
     "    df['IntronDist'] = df.progress_apply(\n",
@@ -474,6 +469,8 @@
     "        anno_clinvar.anno_same_pos_vars, cln_bcf=cln_bcf, axis=1)\n",
     "    df['clinvar_same_motif'] = df.progress_apply(\n",
     "        anno_clinvar.anno_same_motif_vars, cln_bcf=cln_bcf, axis=1)\n",
+    "    df['same_motif_clinsigs'] = df['clinvar_same_motif'].parallel_apply(\n",
+    "        anno_clinvar.extract_same_motif_clinsigs)\n",
     "\n",
     "    logger.info('Parsing SpliceAI results...')\n",
     "    logger.info('Annotating Exon/Intron position information...')\n",
@@ -600,7 +597,6 @@
     "    logger.info('Annotate CCR score')\n",
     "    df = predeffect.anno_ccr_score(df)\n",
     "\n",
-    "\n",
     "    # Extract data with SymbolSource == 'HGNC'\n",
     "    df = df[df['SymbolSource'] == 'HGNC']\n",
     "\n",
@@ -611,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
