--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +197,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Liftoverなどの処理後（ここから解析すればOK）"
+    "## Liftoverなどの処理後（ここから解析すればOK）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,24 +747,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the results of ortools\n",
+    "import pickle\n",
+    "all_solutions = pickle.load(open('all_solutions.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frac = 0.3\n",
+    "frac = 0.4\n",
     "random_state = 13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TP: 17258, TN: 94623\n",
+      "TP: 18432, TN: 102095\n",
       "Filtered out [Warning] ENST_with_Ver_not_available, TP: 17258, TN: 94623\n"
      ]
     }
@@ -803,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -825,19 +836,17 @@
        "       'is_Frameshift_Part_ExDel', 'is_Frameshift_Part_IntRet',\n",
        "       'is_Frameshift_pseudoexon', 'is_Frameshift_IntRet',\n",
        "       'is_Frameshift_skipped_exon', 'is_Frameshift', 'skipped_region',\n",
-       "       'deleted_region', 'skipped_ccrs', 'deleted_ccrs', 'ID', 'mutype',\n",
-       "       'clinvar_clnsig', 'tag', 'deletion', 'insertion',\n",
-       "       'expected_inheritance', 'gnomad_AF', 'LABEL'],\n",
+       "       'deleted_region', 'skipped_ccrs', 'deleted_ccrs', 'LABEL'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tp_train.columns"
+    "df_gnomad.columns"
    ]
   },
   {
@@ -887,31 +896,6 @@
     "        'canon_splai_gte_0.2': solution['s14'],\n",
     "        'clinvar_blb': solution['s15']\n",
     "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = \"Benign/Likely_benign\"\n",
-    "\n",
-    "if x in  ['Benign', 'Likely_benign', 'Benign/Likely_benign']:\n",
-    "    print(ths_scores['clinvar_blb'])\n",
-    "else:\n",
-    "    if x in ['Pathogenic', 'Likely_pathogenic', 'Pathogenic/Likely_pathogenic']:\n",
-    "        print(ths_scores['clinvar_same_pos'])\n",
-    "    else:\n",
-    "        \n"
    ]
   },
   {
@@ -1054,33 +1038,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cln_bcf = \"/home/utsu/Desktop/GitHub/nar/clinvar/Filtered_BCF_GRCh37_20241211-044124/clinvar_GRCh37.germline.nocoflicted.bcf.gz\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tp_train['same_motif_test']= tp_train.apply(anno_same_motif_vars, cln_bcf=pysam.VariantFile(cln_bcf), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tp_train"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [],
@@ -1102,22 +1059,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes\n"
+      "2024/12/26 12:02:48 [INFO   ] (__main__) - TP_train: 6903\n"
      ]
     }
    ],
    "source": [
-    "if \"Likely_benign\" in tp_train.iloc[2, tp_train.columns.get_loc('clinsigs')]:\n",
-    "    print(\"Yes\")\n",
-    "else:\n",
-    "    print(\"No\")"
+    "logger.info(f\"TP_train: {len(tp_train)}\")"
    ]
   },
   {
@@ -1138,7 +1092,52 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/12/26 12:04:57 [INFO   ] (__main__) - Processed solution 1: AUC: 0.9514985279\n",
+      "###  Processed 0 solutions  ###\n",
+      "2024/12/26 12:05:01 [INFO   ] (__main__) - Processed solution 2: AUC: 0.9699941399\n",
+      "2024/12/26 12:05:05 [INFO   ] (__main__) - Processed solution 3: AUC: 0.9711625828\n",
+      "2024/12/26 12:05:09 [INFO   ] (__main__) - Processed solution 4: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:13 [INFO   ] (__main__) - Processed solution 5: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:18 [INFO   ] (__main__) - Processed solution 6: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:22 [INFO   ] (__main__) - Processed solution 7: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:27 [INFO   ] (__main__) - Processed solution 8: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:31 [INFO   ] (__main__) - Processed solution 9: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:35 [INFO   ] (__main__) - Processed solution 10: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:40 [INFO   ] (__main__) - Processed solution 11: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:44 [INFO   ] (__main__) - Processed solution 12: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:49 [INFO   ] (__main__) - Processed solution 13: AUC: 0.9514985279\n",
+      "2024/12/26 12:05:53 [INFO   ] (__main__) - Processed solution 14: AUC: 0.9514162151\n",
+      "2024/12/26 12:05:57 [INFO   ] (__main__) - Processed solution 15: AUC: 0.9514162151\n",
+      "2024/12/26 12:06:01 [INFO   ] (__main__) - Processed solution 16: AUC: 0.9514162151\n",
+      "2024/12/26 12:06:06 [INFO   ] (__main__) - Processed solution 17: AUC: 0.9514162151\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _releaseLock at 0x7556811a2940>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/utsu/miniforge3/envs/nar/lib/python3.8/logging/__init__.py\", line 227, in _releaseLock\n",
+      "    def _releaseLock():\n",
+      "KeyboardInterrupt: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/12/26 12:06:10 [INFO   ] (__main__) - Processed solution 18: AUC: 0.9514162151\n",
+      "2024/12/26 12:06:14 [INFO   ] (__main__) - Processed solution 19: AUC: 0.9514162151\n",
+      "2024/12/26 12:06:19 [INFO   ] (__main__) - Processed solution 20: AUC: 0.9514162151\n"
+     ]
+    }
+   ],
    "source": [
     "results = []\n",
     "buf: float = 0.989\n",
@@ -1215,7 +1214,10 @@
     "         'auROC': f\"{auc1:.10f}, '95% Confidence Interval': {cilower1:.12f}-{ciupper1:.12f}\"\n",
     "        }\n",
     "    )\n",
-    "\n",
+    "    logger.info(f\"Processed solution {i+1}: AUC: {auc1:.10f}\")\n",
+    "    if i % 50 == 0:\n",
+    "        print(f\"###  Processed {i} solutions  ###\")\n",
+    "    \n",
     "    if auc1 > buf:\n",
     "        buf = auc1\n",
     "        print(f\"\\n===== New best AUC: {auc1:.10f} with solution {i+1} =======\")\n",
@@ -1228,9 +1230,7 @@
     "        print(f\"AUC - SpliceAI (95%CI) : {auc2:.3f} [{cilower2:.4f}-{ciupper2:.4f}]\")\n",
     "        print(f\"p-value (DeLong Test)  : {10**p_value_log[0][0]:.2e}\\n\")\n",
     "        print(\"===========================================================\")\n",
-    "        \n",
-    "    if i % 50 == 0:\n",
-    "        print(f\"###  Processed {i} solutions  ###\")\n"
+    "        \n"
    ]
   },
   {
