--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 7 workers.\n",
+      "INFO: Pandarallel will run on 1 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -41,7 +41,9 @@
     "\n",
     "########   Initialize and setup pandas methods   ########\n",
     "os.environ['JOBLIB_TEMP_FOLDER'] = '/tmp' \n",
-    "pandarallel.initialize(nb_workers=os.cpu_count()-1, progress_bar=False, verbose=2, use_memory_fs=False) \n",
+    "# pandarallel.initialize(nb_workers=os.cpu_count()-1, progress_bar=False, verbose=2, use_memory_fs=False) \n",
+    "pandarallel.initialize(nb_workers=1, progress_bar=False, verbose=2, use_memory_fs=False) \n",
+    "\n",
     "tqdm.pandas()\n",
     "\n",
     "import sys\n",
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -303,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TN: 102095\n",
-      "TN: 102095\n",
-      "TP: 18432, TN: 102095\n"
+      "TN: 78048\n",
+      "TN: 78048\n",
+      "TP: 18432, TN: 78048\n"
      ]
     }
    ],
@@ -338,11 +340,11 @@
     "# n = int(len(tp) / 2)\n",
     "# df_non_spl = df_non_spl.sample(n=int(n/100), random_state=42)\n",
     "# df_gnomad = df_gnomad.sample(n=n, random_state=42)\n",
-    "# tn = pd.concat([df_gnomad, df_non_spl], ignore_index=True)\n",
-    "# tn = tn.drop_duplicates(subset=['variant_id'], keep='first')\n",
+    "tn = pd.concat([df_gnomad, df_non_spl], ignore_index=True)\n",
+    "tn = tn.drop_duplicates(subset=['variant_id'], keep='first')\n",
     "\n",
     "tn = df_gnomad.copy()\n",
-    "tn = df_non_spl.copy()\n",
+    "# tn = df_non_spl.copy()・\n",
     "\n",
     "\n",
     "## Exclude non-ORF variants\n",
@@ -360,12 +362,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 関数の設定と重みづけの最適化とパターンの抽出"
+    "## 関数の設定"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +634,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 重みづけの最適化とパターンの抽出"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,25 +767,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frac = 0.4\n",
-    "random_state = 13"
+    "frac = 0.8\n",
+    "random_state = 21"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TP: 18432, TN: 102095\n",
-      "Filtered out [Warning] ENST_with_Ver_not_available, TP: 17258, TN: 94623\n"
+      "TP: 18432, TN: 78048\n",
+      "Filtered out [Warning] ENST_with_Ver_not_available, TP: 17258, TN: 72199\n"
      ]
     }
    ],
@@ -814,68 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['CHROM', 'POS', 'REF', 'ALT', 'GeneSymbol', 'SymbolSource', 'HGNC_ID',\n",
-       "       'ENST', 'HGVSc', 'Consequence', 'EXON', 'INTRON', 'Strand', 'DS_AG',\n",
-       "       'DS_AL', 'DS_DG', 'DS_DL', 'DP_AG', 'DP_AL', 'DP_DG', 'DP_DL',\n",
-       "       'maxsplai', 'loftee', 'maxentscan_alt', 'maxentscan_diff',\n",
-       "       'maxentscan_ref', 'pang_gene', 'pang_pos_socre_1',\n",
-       "       'pang_pos_score_loss', 'pang_warning', 'maxpangolin', 'Squirls',\n",
-       "       'ENST_Full', 'IntronDist', 'is_Canonical', 'Ex_or_Int', 'ex_up_dist',\n",
-       "       'ex_down_dist', 'exon_pos', 'prc_exon_loc', 'exon_splice_site',\n",
-       "       'SpliceType', 'clinvar_same_pos', 'clinvar_same_motif', 'ExInt_INFO',\n",
-       "       'Pseudoexon', 'Part_IntRet', 'Part_ExDel', 'Exon_skipping',\n",
-       "       'Int_Retention', 'multiexs', 'Size_Part_ExDel', 'Size_Part_IntRet',\n",
-       "       'Size_pseudoexon', 'Size_IntRet', 'Size_skipped_exon', 'variant_id',\n",
-       "       'CDS_Length', 'is_10%_truncation', 'is_eLoF', 'is_NMD_at_Canon',\n",
-       "       'is_Frameshift_Part_ExDel', 'is_Frameshift_Part_IntRet',\n",
-       "       'is_Frameshift_pseudoexon', 'is_Frameshift_IntRet',\n",
-       "       'is_Frameshift_skipped_exon', 'is_Frameshift', 'skipped_region',\n",
-       "       'deleted_region', 'skipped_ccrs', 'deleted_ccrs', 'LABEL'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_gnomad.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\"18-19761401-G-T_\\'Likely_benign\\'\"',\n",
-       " ' \"18-19761406-G-C_\\'Likely_benign\\'\"',\n",
-       " ' \"18-19761408-T-C_\\'Likely_benign\\'\"']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "col_num = tp_train.columns.get_loc('clinvar_same_motif')\n",
-    "same_moti = tp_train.iat[2, col_num]\n",
-    "same_moti.split(',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,57 +1038,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/12/26 12:04:57 [INFO   ] (__main__) - Processed solution 1: AUC: 0.9514985279\n",
       "###  Processed 0 solutions  ###\n",
-      "2024/12/26 12:05:01 [INFO   ] (__main__) - Processed solution 2: AUC: 0.9699941399\n",
-      "2024/12/26 12:05:05 [INFO   ] (__main__) - Processed solution 3: AUC: 0.9711625828\n",
-      "2024/12/26 12:05:09 [INFO   ] (__main__) - Processed solution 4: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:13 [INFO   ] (__main__) - Processed solution 5: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:18 [INFO   ] (__main__) - Processed solution 6: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:22 [INFO   ] (__main__) - Processed solution 7: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:27 [INFO   ] (__main__) - Processed solution 8: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:31 [INFO   ] (__main__) - Processed solution 9: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:35 [INFO   ] (__main__) - Processed solution 10: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:40 [INFO   ] (__main__) - Processed solution 11: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:44 [INFO   ] (__main__) - Processed solution 12: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:49 [INFO   ] (__main__) - Processed solution 13: AUC: 0.9514985279\n",
-      "2024/12/26 12:05:53 [INFO   ] (__main__) - Processed solution 14: AUC: 0.9514162151\n",
-      "2024/12/26 12:05:57 [INFO   ] (__main__) - Processed solution 15: AUC: 0.9514162151\n",
-      "2024/12/26 12:06:01 [INFO   ] (__main__) - Processed solution 16: AUC: 0.9514162151\n",
-      "2024/12/26 12:06:06 [INFO   ] (__main__) - Processed solution 17: AUC: 0.9514162151\n"
+      "\n",
+      "===== New best AUC: 0.9885334443 with solution 1 =======\n",
+      "New best solution 0: {'s1': 2, 's2': 1, 's3': 0, 's4': -2, 's5': -1, 's6': 0, 's7': 1, 's8': 3, 's9': 2, 's10': 4, 's11': 2, 's12': -2, 's13': 0, 's14': 3, 's15': -9} \n",
+      "\n",
+      "AUC - Framework (95%CI): 0.989 [0.9875-0.9896]\n",
+      "AUC - SpliceAI (95%CI) : 0.983 [0.9817-0.9848]\n",
+      "p-value (DeLong Test)  : 3.14e-17\n",
+      "\n",
+      "===========================================================\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function _releaseLock at 0x7556811a2940>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/utsu/miniforge3/envs/nar/lib/python3.8/logging/__init__.py\", line 227, in _releaseLock\n",
-      "    def _releaseLock():\n",
-      "KeyboardInterrupt: \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/12/26 12:06:10 [INFO   ] (__main__) - Processed solution 18: AUC: 0.9514162151\n",
-      "2024/12/26 12:06:14 [INFO   ] (__main__) - Processed solution 19: AUC: 0.9514162151\n",
-      "2024/12/26 12:06:19 [INFO   ] (__main__) - Processed solution 20: AUC: 0.9514162151\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 38\u001b[0m\n\u001b[1;32m     34\u001b[0m tp_train \u001b[38;5;241m=\u001b[39m tp_train[tp_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minsilico_screening\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNot available\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     35\u001b[0m tp_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPriorityScore\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m tp_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minsilico_screening\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m tp_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclinvar_screening\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 38\u001b[0m tn_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minsilico_screening\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mtn_train\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparallel_apply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscoring\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minsilico_screening\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m tn_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclinvar_screening\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m tn_train\u001b[38;5;241m.\u001b[39mparallel_apply(scoring\u001b[38;5;241m.\u001b[39mclinvar_screening, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# tn_train['PriorityScore'] = tn_train.parallel_apply(scoring.calc_priority_score, axis=1)\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# tn_train = scoring.calc_priority_score(tn_train)\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/site-packages/pandarallel/core.py:428\u001b[0m, in \u001b[0;36mparallelize_with_pipe.<locals>.closure\u001b[0;34m(data, user_defined_function, *user_defined_function_args, **user_defined_function_kwargs)\u001b[0m\n\u001b[1;32m    423\u001b[0m generation \u001b[38;5;241m=\u001b[39m count()\n\u001b[1;32m    425\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28many\u001b[39m(\n\u001b[1;32m    426\u001b[0m     (worker_status \u001b[38;5;241m==\u001b[39m WorkerStatus\u001b[38;5;241m.\u001b[39mRunning \u001b[38;5;28;01mfor\u001b[39;00m worker_status \u001b[38;5;129;01min\u001b[39;00m workers_status)\n\u001b[1;32m    427\u001b[0m ):\n\u001b[0;32m--> 428\u001b[0m     message: Tuple[\u001b[38;5;28mint\u001b[39m, WorkerStatus, Any] \u001b[38;5;241m=\u001b[39m \u001b[43mmaster_workers_queue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    429\u001b[0m     worker_index, worker_status, payload \u001b[38;5;241m=\u001b[39m message\n\u001b[1;32m    430\u001b[0m     workers_status[worker_index] \u001b[38;5;241m=\u001b[39m worker_status\n",
+      "File \u001b[0;32m<string>:2\u001b[0m, in \u001b[0;36mget\u001b[0;34m(self, *args, **kwds)\u001b[0m\n",
+      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/multiprocessing/managers.py:835\u001b[0m, in \u001b[0;36mBaseProxy._callmethod\u001b[0;34m(self, methodname, args, kwds)\u001b[0m\n\u001b[1;32m    832\u001b[0m     conn \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_tls\u001b[38;5;241m.\u001b[39mconnection\n\u001b[1;32m    834\u001b[0m conn\u001b[38;5;241m.\u001b[39msend((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id, methodname, args, kwds))\n\u001b[0;32m--> 835\u001b[0m kind, result \u001b[38;5;241m=\u001b[39m \u001b[43mconn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecv\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    837\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m kind \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m#RETURN\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    838\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/multiprocessing/connection.py:250\u001b[0m, in \u001b[0;36m_ConnectionBase.recv\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    248\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_closed()\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_readable()\n\u001b[0;32m--> 250\u001b[0m buf \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_recv_bytes\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    251\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _ForkingPickler\u001b[38;5;241m.\u001b[39mloads(buf\u001b[38;5;241m.\u001b[39mgetbuffer())\n",
+      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/multiprocessing/connection.py:414\u001b[0m, in \u001b[0;36mConnection._recv_bytes\u001b[0;34m(self, maxsize)\u001b[0m\n\u001b[1;32m    413\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_recv_bytes\u001b[39m(\u001b[38;5;28mself\u001b[39m, maxsize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m--> 414\u001b[0m     buf \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_recv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    415\u001b[0m     size, \u001b[38;5;241m=\u001b[39m struct\u001b[38;5;241m.\u001b[39munpack(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m!i\u001b[39m\u001b[38;5;124m\"\u001b[39m, buf\u001b[38;5;241m.\u001b[39mgetvalue())\n\u001b[1;32m    416\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m size \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n",
+      "File \u001b[0;32m~/miniforge3/envs/nar/lib/python3.8/multiprocessing/connection.py:379\u001b[0m, in \u001b[0;36mConnection._recv\u001b[0;34m(self, size, read)\u001b[0m\n\u001b[1;32m    377\u001b[0m remaining \u001b[38;5;241m=\u001b[39m size\n\u001b[1;32m    378\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m remaining \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 379\u001b[0m     chunk \u001b[38;5;241m=\u001b[39m \u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mremaining\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    380\u001b[0m     n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(chunk)\n\u001b[1;32m    381\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "results = []\n",
-    "buf: float = 0.989\n",
+    "buf: float = 0.980\n",
     "\n",
     "for i, solution in enumerate(all_solutions):\n",
     "    # if i < 2000:\n",
@@ -1214,9 +1151,9 @@
     "         'auROC': f\"{auc1:.10f}, '95% Confidence Interval': {cilower1:.12f}-{ciupper1:.12f}\"\n",
     "        }\n",
     "    )\n",
-    "    logger.info(f\"Processed solution {i+1}: AUC: {auc1:.10f}\")\n",
     "    if i % 50 == 0:\n",
     "        print(f\"###  Processed {i} solutions  ###\")\n",
+    "    # logger.info(f\"Processed solution {i+1}: AUC: {auc1:.10f}\")\n",
     "    \n",
     "    if auc1 > buf:\n",
     "        buf = auc1\n",
