--- a/ValidationData/TP/additional/gnomad_all.ipynb
+++ b/ValidationData/TP/additional/gnomad_all.ipynb
@@ -1865,7 +1865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nar",
+   "display_name": "sss",
    "language": "python",
    "name": "python3"
   },
