--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -16,7 +16,8 @@
    ],
    "source": [
     "# conda create -n sss python=3.8 -y && conda activate sss\n",
-    "# conda install -y -c bioconda gffutils jupyter tqdm cyvcf2 pathlib2 pandarallel pysam liftover pybedtools\n",
+    "# pip install gffutils jupyter tqdm cyvcf2 pathlib2 pandarallel pysam liftover \n",
+    "# conda install -y -c bioconda pybedtools\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
