--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -1292,11 +1292,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### 昔の計算テスト"
    ]
@@ -4743,6 +4738,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(optimal_threshold_pangolin, 3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
    "outputs": [
@@ -7319,7 +7334,9 @@
     "    mcc = matthews_corrcoef(data['LABEL'], data['Prediction'])\n",
     "    return specificity, sensitivity, accuracy, precision, f1, mcc\n",
     "\n",
-    "\n",
+    "threshold_maxent = np.round(optimal_threshold_maxent, 2)\n",
+    "threshold_pangolin = np.round(optimal_threshold_pangolin, 3)\n",
+    "threshold_sqirls = np.round(optimal_threshold_squirls, 3)\n",
     "\n",
     "performance_metrics = []\n",
     "for threshold in thresholds_fw:\n",
@@ -7348,22 +7365,31 @@
     "        0.2: 'SpliceAI (0.2)<br> High sensitivity', \n",
     "        0.5: 'SpliceAI (0.5)<br> Recommended', \n",
     "        0.8: 'SpliceAI (0.8)<br> High precision',\n",
-    "        'MaxEntScan': 'MaxEntScan (2.1)<br> Youden index',\n",
-    "        'Pangolin': 'Pangolin (0.2)<br> Youden index',\n",
-    "        'Squirls': 'Squirls (0.04)<br> Youden index'\n",
+    "        'MaxEntScan': 'MaxEntScan ({threshold_maxent})',\n",
+    "        'Pangolin': 'Pangolin ({thrshold_pangolin})',\n",
+    "        'Squirls': 'Squirls ({threshold_sqirls})'\n",
     "        }}, inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8\n",
+      "0.15\n",
+      "0.03\n"
+     ]
+    }
+   ],
    "source": [
-    "# Optimal threshold (using Youden index): 1.0\n",
-    "# Optimal threshold (using Youden index) - MaxEntScan: 1.798\n",
-    "# Optimal threshold (using Youden index) - Pangolin: 0.15000000596046448\n",
-    "# Optimal threshold (using Youden index) - Squirls: 0.03"
+    "print(np.round(optimal_threshold_maxent, 2))\n",
+    "print(np.round(optimal_threshold_pangolin, 3))\n",
+    "print(np.round(optimal_threshold_squirls, 3))"
    ]
   },
   {
