--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -503,42 +503,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/60/yz_x62ts3ln6z030yykm0h2r0000gn/T/ipykernel_77129/1013456568.py:2: FutureWarning:\n",
-      "\n",
-      "Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "280\n",
-      "6139\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/60/yz_x62ts3ln6z030yykm0h2r0000gn/T/ipykernel_77129/1013456568.py:34: FutureWarning:\n",
-      "\n",
-      "Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "\n",
-      "/var/folders/60/yz_x62ts3ln6z030yykm0h2r0000gn/T/ipykernel_77129/1013456568.py:35: FutureWarning:\n",
-      "\n",
-      "Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.replace({'\\u2161': 'II', '\\u2163': 'IV', '\\u2162': 'III'}, inplace=True, regex=True)\n",
     "df.fillna('.', inplace=True)\n",
@@ -6922,7 +6889,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "sss",
    "language": "python",
    "name": "python3"
   },
@@ -6936,7 +6903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.8.20"
   },
   "orig_nbformat": 4
  },
