--- a/ValidationData/TP/additional/mydata_all.ipynb
+++ b/ValidationData/TP/additional/mydata_all.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "解析前の raw vcf. ファイルの場所は後でまた使う"
+    "解析前の raw vcf ファイルのパスは後でまた使う"
    ]
   },
   {
