--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 計算済み - 重みづけのパターンの探索"
+    "#### 計算済み - 重みづけのパターンの探索"
    ]
   },
   {
@@ -586,12 +586,7 @@
     "\n",
     "for lowerlimit in range(-5, -4):\n",
     "    all_solutions = find_all_solutions(lowerlimit=lowerlimit)\n",
-    "    print(f'Total solutions found (lowerlimit {lowerlimit}): {len(all_solutions)}')\n",
-    "\n",
-    "# #Debug and confirm the solutions\n",
-    "# for index, solution in enumerate(all_solutions):\n",
-    "#     print(f'Solution {index + 1}: {solution}')\n",
-    "\n"
+    "    print(f'Total solutions found (lowerlimit {lowerlimit}): {len(all_solutions)}')\n"
    ]
   },
   {
@@ -609,7 +604,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# To pickle the results of ortools\n",
     "import pickle\n",
     "with open(all_solutions_pkl, 'wb') as f:\n",
@@ -620,12 +614,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Liftoverなどの処理後（ここから解析すればOK）"
+    "#### Liftoverなどの処理後（ここから解析すればOK）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +664,6 @@
     "print(len(df))\n",
     "df = pd.merge(df, allmut, on='ID', how='inner')\n",
     "print(len(df))\n",
-    "\n",
     "\n",
     "exclude_csq = {\n",
     "    '3_prime_UTR_variant', '5_prime_UTR_variant', 'mature_miRNA_variant',\n",
